# netra-observe

.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-07-09-netra-observe-mastra.md
docs/superpowers/specs/: 2026-07-09-netra-observe-mastra-design.md
js/: FINDINGS.md  README.md  package-lock.json  package.json  tsup.config.ts
js/examples/: mastra_agent.ts
js/src/: config.ts  context.ts  index.ts  inject.ts  instrument.ts  provider.ts
js/src/mastra/: convert.ts  exporter.ts  index.ts  span-source.ts
js/test/: config.test.ts  inject.test.ts  instrument.test.ts  mastra-convert.test.ts  mastra-e2e.test.ts  mastra-exporter.test.ts  mastra-span-source.test.ts  mastra-spike.test.ts  provider.test.ts  spike.test.ts
python/: README.md  pyproject.toml
python/examples/: langchain_agent.py  multi_turn_agent.py
python/src/netra_observe/: __init__.py  _config.py  _inject.py  _provider.py  _runholder.py
python/tests/: conftest.py  test_config.py  test_inject.py  test_instrument.py  test_provider.py
