[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netra-observe"
version = "0.1.0"
description = "One-line LangChain observability for Netra Runtime: traces into your Usage tab."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "openinference-instrumentation-langchain>=0.1.67",
    "httpx>=0.23",
]

[project.optional-dependencies]
dev = ["pytest>=7", "langchain-core>=0.2", "langchain-openai>=0.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
